--- a/views/base.pug
+++ b/views/base.pug
@@ -11,7 +11,7 @@ html
             title Natours | #{title}
 
     
-    body
+    body(data-alert=`${alert ? alert : ''}`)
         // HEADER
         include _header
 
