--- a/views/_header.pug
+++ b/views/_header.pug
@@ -1,6 +1,7 @@
 header.header
     nav.nav.nav--tours
         a.nav__el(href='/') #{title}
+        a.nav__el(href='https://www.nearkathmandu.com') Developed by Bikram Aryal(Node JS Learning)
     .header__logo
         img(src='/img/logo-white.png' alt='Natours logo')
     nav.nav.nav--user
